fix fixed menu on ios

--- a/src/css/shared/_header.sass
+++ b/src/css/shared/_header.sass
@@ -112,7 +112,7 @@
 
   @media only screen and (max-width: #{$viewport-large - 1})
     position: fixed
-    top: 0
+    top: -1px
     left: 0
     width: 100%
 
